:bug: Fix Select notFound align issue
close #15567

close #14422 again

--- a/components/select/style/index.less
+++ b/components/select/style/index.less
@@ -580,6 +580,12 @@
     }
   }
 
+  // Patch for popup adjust
+  // https://github.com/ant-design/ant-design/issues/14422
+  &--empty&--multiple &-menu-item {
+    padding-right: @control-horizontal-padding;
+  }
+
   &-container-open,
   &-open {
     .@{select-prefix-cls}-dropdown {
